# Cpp-Conversions

./: LICENSE  README.md
java_conversions/: .gitignore  CMakeLists.txt  Makefile  Makefile.cmake  README.md
java_conversions/nov1/assignment_1/: .gitignore  Makefile  README.md
java_conversions/nov1/assignment_1/src/: Main.cpp
java_conversions/nov1/assignment_2/: Makefile  README.md
java_conversions/nov1/assignment_2/include/: Game.hpp
java_conversions/nov1/assignment_2/src/: Game.hpp  Main.cpp
java_conversions/nov2/assignment_1/: Makefile  README.md
java_conversions/nov2/assignment_2/: Makefile  README.md
java_conversions/nov2/assignment_3/: Makefile  README.md
java_conversions/nov3/assignment_1/: Makefile  README.md
java_conversions/nov3/assignment_2/: .gitignore  CMakeLists.txt  Makefile  README.md  test.txt
java_conversions/nov3/assignment_3/: CMakeLists.txt  Makefile  README.md  test.txt
java_conversions/nov4/assignment_1/: CMakeLists.txt  Makefile  README.md
java_conversions/nov4/assignment_1/include/: Singleton.hpp
java_conversions/nov4/assignment_1/src/: Main.cpp  Singleton.cpp
java_conversions/nov4/assignment_2/: CMakeLists.txt  Makefile  README.md
java_conversions/nov4/assignment_2/src/: Main.cpp
java_conversions/nov4/assignment_3/: CMakeLists.txt  Makefile  README.md
java_conversions/nov4/assignment_3/include/: Consumer.hpp  Producer.hpp
java_conversions/nov4/assignment_3/src/: Main.cpp
java_conversions/nov4/assignment_4/: CMakeLists.txt  Makefile  README.md
java_conversions/nov4/assignment_4/include/: Line.hpp
java_conversions/nov5/assignment_1/: README.md
java_conversions/nov5/assignment_2/: README.md  manifest.txt
java_conversions/week1/assignment_1/: README.md
java_conversions/week1/assignment_2/: README.md
java_conversions/week1/assignment_3/: README.md
java_conversions/week1/assignment_4/: README.md
java_conversions/week1/assignment_5/: README.md
java_conversions/week1/assignment_6/: README.md
(+13 files in other folders)
